Hopefully fix mobile grey outline
I think this is the cause, without looking into it in too much more detail. Will confirm later and fix if not

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -26,3 +26,7 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+.body{
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
